pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart.strong.modular.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart:9:8: Error: No type was provided to find the dot shorthand 'new'.
//   x = .new(1); // Error.
//        ^^^
//
// pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart:10:8: Error: No type was provided to find the dot shorthand 'new'.
//   x = .new; // Error.
//        ^^^
//
// pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart:11:8: Error: No type was provided to find the dot shorthand 'getter'.
//   x = .getter; // Error.
//        ^^^^^^
//
// pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart:12:8: Error: No type was provided to find the dot shorthand 'method'.
//   x = .method(); // Error.
//        ^^^^^^
//
// pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart:13:8: Error: No type was provided to find the dot shorthand 'named'.
//   x = .named(1); // Error.
//        ^^^^^
//
// pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart:17:19: Error: No type was provided to find the dot shorthand 'new'.
//   constX = const .new(1); // Error.
//                   ^^^
//
// pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart:18:19: Error: No type was provided to find the dot shorthand 'named'.
//   constX = const .named(1); // Error.
//                   ^^^^^
//
import self as self;
import "main_lib.dart" as mai;

import "org-dartlang-testcase:///main_lib.dart";

static method test() → void {
  mai::_E% /* erasure=dart.core::int, declared=! */ x = mai::one;
  x = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart:9:8: Error: No type was provided to find the dot shorthand 'new'.
  x = .new(1); // Error.
       ^^^" as{TypeError,ForDynamic} mai::_E% /* erasure=dart.core::int, declared=! */;
  x = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart:10:8: Error: No type was provided to find the dot shorthand 'new'.
  x = .new; // Error.
       ^^^" as{TypeError,ForDynamic} mai::_E% /* erasure=dart.core::int, declared=! */;
  x = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart:11:8: Error: No type was provided to find the dot shorthand 'getter'.
  x = .getter; // Error.
       ^^^^^^" as{TypeError,ForDynamic} mai::_E% /* erasure=dart.core::int, declared=! */;
  x = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart:12:8: Error: No type was provided to find the dot shorthand 'method'.
  x = .method(); // Error.
       ^^^^^^" as{TypeError,ForDynamic} mai::_E% /* erasure=dart.core::int, declared=! */;
  x = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart:13:8: Error: No type was provided to find the dot shorthand 'named'.
  x = .named(1); // Error.
       ^^^^^" as{TypeError,ForDynamic} mai::_E% /* erasure=dart.core::int, declared=! */;
  x = mai::_E|constructor#(1);
  mai::_EConst% /* erasure=dart.core::int, declared=! */ constX = #C1;
  constX = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart:17:19: Error: No type was provided to find the dot shorthand 'new'.
  constX = const .new(1); // Error.
                  ^^^" as{TypeError,ForDynamic} mai::_EConst% /* erasure=dart.core::int, declared=! */;
  constX = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_extension_type/main.dart:18:19: Error: No type was provided to find the dot shorthand 'named'.
  constX = const .named(1); // Error.
                  ^^^^^" as{TypeError,ForDynamic} mai::_EConst% /* erasure=dart.core::int, declared=! */;
  constX = #C1;
}

constants  {
  #C1 = 1
}
